# release-plz-action

./: .gitignore  Dockerfile  README.md  action.yml  entrypoint.sh
.github/workflows/: test.yml  update_main_version.yml
.github/workflows/marco-test-one/: Cargo.toml
updater/: Cargo.toml  README.md
updater/src/: args.rs  main.rs  pr.rs  release.rs
