[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8" , features = ["derive"] }
semver = "1.0.16"
inquire = "0.6.0"
next_version = "0.2.2"
git_cmd = "0.2.16"
