[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21" , features = ["derive"] }
semver = "1.0.18"
inquire = "0.6.2"
next_version = "0.2.5"
git_cmd = "0.4.8"
