[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18" , features = ["derive"] }
semver = "1.0.21"
inquire = "0.6.2"
next_version = "0.2.13"
git_cmd = "0.4.20"
serde_yaml = "0.9.33"
